2017-12-08  Fujii Hironori  <Hironori.Fujii@sony.com>

        [WinCairo][Ninja] Incremental build failure of WTF
        https://bugs.webkit.org/show_bug.cgi?id=180521

        Reviewed by Konstantin Tokarev.

        WTF included its forwarding headers in Windows ports. The
        directory DerivedSources/ForwardingHeaders shouldn't be a include
        path for WTF.

        * Source/cmake/OptionsWin.cmake:
        Removed DerivedSources/ForwardingHeaders and DerivedSources from include paths.

2017-12-07  Michael Catanzaro  <mcatanzaro@igalia.com>

        [WPE][GTK] Freeze WebKit version in user agent
        https://bugs.webkit.org/show_bug.cgi?id=180475

        Reviewed by Carlos Garcia Campos.

        * Source/cmake/OptionsGTK.cmake:
        * Source/cmake/OptionsWPE.cmake:

2017-12-05  Stephan Szabo  <stephan.szabo@sony.com>

        Switch windows build to Visual Studio 2017
        https://bugs.webkit.org/show_bug.cgi?id=172412

        Reviewed by Per Arne Vollan.

        * Source/cmake/OptionsMSVC.cmake:

2017-12-01  Konstantin Tokarev  <annulen@yandex.ru>

        [cmake] Make description of ENABLE_DRAG_SUPPORT more informative
        https://bugs.webkit.org/show_bug.cgi?id=180266

        Reviewed by Michael Catanzaro.

        When disabled, it also disables selection of text with dragging, and this
        comes as a surprise for many people.

        * Source/cmake/WebKitFeatures.cmake:

2017-12-01  Michael Catanzaro  <mcatanzaro@igalia.com>

        [GStreamer] Fix USE_GSTREAMER_GL check for GStreamer 1.10
        https://bugs.webkit.org/show_bug.cgi?id=180256

        Reviewed by Carlos Alberto Lopez Perez.

        It's not safe to change the value of build options after WEBKIT_OPTION_END, since it breaks
        the option dependency checker. I don't think that actually hurts anything in this case, but
        let's not encourage bad practice. Also, it's not good for features to be secretly disabled.