@@ -1,3 +1,12 @@
+2017-12-12  Don Olmstead  <don.olmstead@sony.com>
+
+        [WinCairo] Enable WebP support
+        https://bugs.webkit.org/show_bug.cgi?id=179908
+
+        Reviewed by Konstantin Tokarev.
+
+        * Source/cmake/OptionsWinCairo.cmake:
+
 2017-12-08  Fujii Hironori  <Hironori.Fujii@sony.com>
 
         [WinCairo][Ninja] Incremental build failure of WTF
